= CHANGES

== 0.10.3 (Not Yet Released)

* FIX issue with generator runner for https templates (@xavierRiley)
* NEW #657 improve docs and conform to YARD format (@postmodern)
* NEW #658 remove shoulda and switch to minitest (plus aliases)

== 0.10.2

* NEW support for TravisCI with build configurations
* NEW support of mysql2 when using sequel as adapter (@rafaelss)
* NEW #636 print which views are called in log when in development mode (@minikomi)
* NEW support of ActiveRecord 3.1 and ActiveSupport 3.1
* NEW yard doc available {here}[http://www.padrinorb.com/api/index.html]
* FIX #624 potential issue with libxml-ruby (@farcaller)
* FIX #618 allow to map routes using "index" reserved word
* FIX #633 RACK_ENV now is respected also using bundled server
* FIX rendering error for partials when they start with a forward slash (@philly-mac)
* FIX all our sources files now are vim friendly
* FIX preserve the original options when resolving a template (@Xylakant)
* FIX bad path in shoulda test generator (@futurechimp)
* FIX require path in model tests to generate correctly if specifing app
* FIX #647 allow to override view errors
* FIX #646 compat with ActiveRecord >3.0.10
* FIX #381 escape "<> from tag helpers values
* FIX #639 prevent XSS from admin login (@eikes)
* FIX #620 render :json => obj now set content_type to 'application/json;charset=utf-8'
* FIX #575 when using html parts now mailer content type is 'multipart/alternative'
* FIX #631 reloading futzing with the query parameters (Hollin Wilkins & Dave Willett @ TrueCar in San Francisco)
* FIX recognize_path now is compatible with http_router > 0.10

== 0.10.1

* Added a Mongo store for padrino-cache [Thanks to aliem]
* Adds restful support for parent controller declaration
* Before filters are called regardless of matching
* Fix env['padrino.instance'] where create a loop and is too long to show in Padrino::ShowExceptions.
* Compat with Slim 1.0, Compat with Ruby 1.9.3. FIX #596