@@ -7,3 +7,6 @@
   h1 This is content yielded with name #{fname + " " + lname}
 
 .demo2== yield_content :demo2, "Johnny", "Smith"
+
+.demo_has_content== content_for?(:demo)
+.fake_has_content== content_for?(:fake)
