@@ -24,7 +24,27 @@ describe "OutputHelpers" do
       assert_have_selector '.demo h1', :content => "This is content yielded from a content_for"
       assert_have_selector '.demo2 h1', :content => "This is content yielded with name Johnny Smith"
     end
-  end
+  end # content_for
+
+  context "for #content_for? method" do
+    should 'work for erb templates' do
+      visit '/erb/content_for'
+      assert_have_selector '.demo_has_content', :content => "true"
+      assert_have_selector '.fake_has_content', :content => "false"
+    end
+
+    should "work for haml templates" do
+      visit '/haml/content_for'
+      assert_have_selector '.demo_has_content', :content => "true"
+      assert_have_selector '.fake_has_content', :content => "false"
+    end
+
+    should "work for slim templates" do
+      visit '/slim/content_for'
+      assert_have_selector '.demo_has_content', :content => "true"
+      assert_have_selector '.fake_has_content', :content => "false"
+    end
+  end # content_for?
 
   context 'for #capture_html method' do
     should "work for erb templates" do
